# TerminalRgb

trgb/: README.md  pyproject.toml
trgb/src/trgb/: __init__.py  colors.py  colors256.py  rgb.py  styles.py  sw.py
